Generate authenticate url